@@ -304,3 +304,71 @@ __do_copy_data:
 #endif	/* __AVR_ASM_ONLY__ */
 ;	.endfunc
 
+    .section .note.gnu.avr.deviceinfo, "", @note
+#define NOTE_NAME "AVR"
+#ifdef __AVR_DEVICE_NAME__
+    #define DEVICE_NAME STR(__AVR_DEVICE_NAME__)
+#else
+    #define DEVICE_NAME ""
+#endif
+
+    .long .L__note_name_end - .L__note_name_start
+    .long .L__desc_end - .L__desc_start
+    .long 1 ; Type 1 - this is the only known note type for AVR.
+.L__note_name_start:
+    .asciz NOTE_NAME
+    .balign 4
+.L__note_name_end:
+.L__desc_start:
+#ifdef FLASHSTART
+    .long FLASHSTART
+#else
+    .long 0
+#endif
+#ifdef PROGMEM_SIZE
+    .long PROGMEM_SIZE
+#elif FLASHEND > 0
+    .long FLASHEND + 1
+#else
+    .long FLASHEND
+#endif
+    .long RAMSTART
+#ifdef RAMSIZE
+    .long RAMSIZE
+#elif RAMEND > 0
+    .long RAMEND - RAMSTART + 1
+#else
+    .long RAMEND
+#endif
+#ifdef E2START
+    .long E2START
+#else
+    .long 0
+#endif
+#ifdef EEPROM_SIZE
+    .long EEPROM_SIZE
+#elif E2END > 0
+    .long E2END + 1
+#else
+    .long E2END
+#endif
+    /* String offsets table.
+    Index 0 - Size of offset table in bytes
+    Index 1 - Device name byte offset
+    */
+.L__stroffsettab_start:
+.long .L__stroffsettab_end - .L__stroffsettab_start /* Size of index table in bytes */
+.long .L__device_name_start - .L__strtab_start /* Byte offset of device name */
+.L__stroffsettab_end:
+    /* String table for storing arbitrary strings.
+    Offsets are stored in the string offset table above */
+.L__strtab_start:
+    .byte 0
+.L__device_name_start:
+    .asciz DEVICE_NAME
+.L__device_name_end:
+    .byte 0
+.L__strtab_end:
+.L__desc_end:
+    .balign 4
+
